# clinical-data-platform

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  medplum.md  sample-data.md
scripts/: seed_clinical_data.py  seed_patients.py  seed_providers.py
src/clinical_data_platform/: __init__.py  main.py
src/clinical_data_platform/api/: health.py  patients.py
src/clinical_data_platform/core/: config.py
src/clinical_data_platform/services/: medplum.py
tests/: test_health.py  test_medplum.py
